[project]
name = "ejcm-mtle"
version = "2.1.2"
description = "Tools to generate, relabel, and merge sentences using MTLE"
authors = [
    {name = "Takumi OHASHI",email = "tamiii0719@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ginza (==5.1.3)",
    "ja-ginza (==5.1.2)",
    "numpy (==1.26.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
